@@ -6,8 +6,9 @@ BUG: Ticket#662 - Ensure TForm to properly encode the ampersand in action URL (Q
 BUG: Ticket#666 - TActiveRecord::deleteAll() method always requires a criteria or null parameter (Qiang)
 BUG: Ticket#670 - TDatePicker: Year Issue (Christophe)
 BUG: Ticket#648 - Validation: onClick and onBlur events order (Christophe)
-ENH: Ticket#667 - Added TFeedService.ContentType property (Qiang)
 ENH: Ticket#577 - Added image button support for TPager (Qiang)
+ENH: Ticket#667 - Added TFeedService.ContentType property (Qiang)
+ENH: Ticket#678 - Improved DateTimeFormatInfo performance (Stever)
 ENH: Added THead requirement check (Qiang)
 CHG: GeSHi is replaced with Text_Highlighter (Christophe)
 NEW: Added TTabPanel (Qiang)
